# TriadArena

./: .gitignore  BUILDING.md  CMakeLists.txt  COPYING  README.md  default.fmf
game/triadarena/: csprogs.dat.en.po
game/triadarena/glsl/: defaultanimwall.glsl  rottsky.glsl
rott/: autoexec.cfg  quake.rc
rott/glsl/: defaultwall.glsl  rottsky.glsl
rott/maps/: base1.map  e1a1.map
rott/src/: client.src  progs.src  server.src
rott/src/client/: main.qc  upload.qc
rott/src/darkwar/: music.qc  rott_map.qc  tables.qc  wad.qc
rott/src/server/: main.qc  player.qc  worldspawn.qc
rott/src/shared/: defs.qc  fteextensions.qc  wad.qc
source/client/: defs.qc  main.qc  upload.qc
source/darkwar/: fonts.qc  rtl.qc  wad.qc
source/menu/: mapcache.qc  widgets.qc
source/server/: main.qc
source/server/entities/: info_player_start.qc  worldspawn.qc
source/shared/: defs.qc  utilities.qc
triadarena/: autoexec.cfg  default.cfg  dev.cfg
triadarena/glsl/: defaultanimwall.glsl  defaultwall.glsl
triadarena/scripts/: music.json
triadarena/src/: client.src  menu.src  progs.src  server.src
triadarena/src/client/: chat.qc  main.qc  upload.qc
triadarena/src/darkwar/: defs.qc  fonts.qc  music.qc  rott_map.qc  rtl.qc  wad.qc
triadarena/src/menu/: defs.qc  main.qc  mapcache.qc  sui_sys.qc  widgets.qc
triadarena/src/server/: defs.qc  info_player_start.qc  main.qc  misc.qc  player.qc  prop_disk.qc  world.qc  worldspawn.qc
triadarena/src/shared/: defs.qc  fteextensions.qc  utilities.qc
